<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".order.activity.FilterActivity">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@android:color/white"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_unpressed"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:text="@string/cancel"

                    android:textSize="@dimen/sp_15" />

            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/filter"
                    android:textSize="@dimen/sp_15"

                    />

            <TextView
                    android:id="@+id/tvApply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_pressed"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:text="@string/apply"
                    android:textSize="@dimen/sp_15" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFilterList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tvAddFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="0.5"
                android:background="@drawable/bg_normal_button"
                android:gravity="center"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:text="Add Filter"
                android:textColor="@color/colorPressed"
                android:textSize="@dimen/sp_15" />

        <TextView
                android:id="@+id/tvClearAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="0.5"
                android:background="@drawable/bg_normal_button"
                android:gravity="center"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:text="Clear All"
                android:textColor="@color/colorPressed"
                android:textSize="@dimen/sp_15"


                />

    </LinearLayout>


</LinearLayout>